--- a/service1-dev.yml
+++ b/service1-dev.yml
@@ -5,8 +5,8 @@ server:
 
 app:
   name: "Service 1"
-  version: "1.0.4:latest"
-  developer: "rbd@email.com"
+  version: "1.0.5:latest"
+  developer: "Rbendaoud@rbd.com"
   feature-flags:
     enableNewUI: true
     enableLogging: true
@@ -14,13 +14,14 @@ app:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/service1_dev
-    username: dev_user
-    password: dev_pass
+    username: root
+    password: 
 
 logging:
   level:
     root: INFO
     com.service1: DEBUG
+
 
 
 
