--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,9 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,refresh, info
+
 global:
   message: "Hello from shared config!"
+
